src/test/deca/context/invalid/redefinition_signature_Unmached.deca
// Description:
//    redefinition with unmached signature
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	protected int x;
	void setX(int b, int d){
		this.x = b + d;
	}
}

class B extends A {
	void setX(int b, float d){
		this.x = b + d;
	}
}
